# codewars_katas

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: benchmark_decompose.cpp  benchmark_skyscrapers.cpp
src/: battleships.hpp  brainfuck.hpp  decompose.hpp  format_duration.hpp  lift.hpp  magnets.hpp  observed_pin.hpp  parse_ints.hpp  permutations.hpp  skyscrapers.hpp  transformations.hpp
test/: test_battleships.cpp  test_brainfuck.cpp  test_decompose.cpp  test_format_duration.cpp  test_lift.cpp  test_magnets.cpp  test_observed_pin.cpp  test_parse_ints.cpp  test_permutations.cpp  test_skyscrapers.cpp  test_transformations.cpp
